<resources>
    <string name="app_name">QiCheZuLin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Qing_shu_ru_shou_ji_hao">请输入手机号</string>
    <string name="Qing_shu_ru_mi_ma">请输入密码</string>
    <string name="Qing_shu_ru_yan_zheng_ma">请输入验证码</string>
    <string name="huo_qu_yan_zheng_ma">获取验证码</string>
    <string name="tong_yi">我同意</string>
    <string name="tong_cheng_yong_hu_xie_yi">《同城用户协议》</string>


    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="yi_jian_zu_che">一键租车</string>
    <string name="wang_dian_cha_xun">网点查询</string>
    <string name="che_xing_cha_xun">车型查询</string>
    <string name="xing_cheng">行程</string>
    <string name="RuiChi">瑞驰EK 35</string>
    <string name="xing_che_number">00:35:23</string>

    <string name="car_name">本田飞度</string>
    <string name="car_remark">两箱/1.3自动/乘坐5人</string>
    <string name="car_price">¥99/</string>
    <string name="car_everyday">日均</string>
    <string name="get_car_time">取车时间</string>
    <string name="back_car">还车时间</string>
    <string name="show_time">07/22/20:00</string>
    <string name="car_yue_price">¥2470/</string>
    <string name="yue_zu_jia">月租价</string>

    <string name="quxiao">取消</string>
    <string name="que_ding">确定</string>
    <string name="yu_yue_zu_che">预约租车</string>
    <string name="date1">07-22</string>
    <string name="time1">周二 11:00</string>
    <string name="qu_che_men_dian">取车门店</string>
    <string name="car_type">车辆类型</string>
    <string name="no_limit">不限</string>
    <string name="zu_che_type">租车类型:</string>
    <string name="hour_zu">小时租</string>
    <string name="day_zu">日租</string>
    <string name="month_zu">月租</string>
    <string name="hour_money">租金 0~40</string>
    <string name="day_money">日租金</string>
    <string name="month_money">月租金</string>
    <string name="help_me_to_chose_car">帮我选车</string>
    <string name="i_want_to_chose_car">我要选车</string>
    <string name="person_center">个人中心</string>
    <string name="zhang_hao_info">账号信息</string>
    <string name="counnt_number">136****3675</string>
    <string name="zu_che_record">租车记录</string>
    <string name="use_car_record">用车记录</string>
    <string name="tui_che_deng_lu">退出登录</string>
    <string name="wo_de_ji_fen">我的积分</string>
    <string name="zan_di_yong">赞积分,享抵用</string>
    <string name="wo_de_qian_bao">我的钱包</string>
    <string name="yu_e_chong_zhi">余额充值</string>
    <string name="bao_zheng_jin">保证金</string>
    <string name="zu_che_ya_jin">租车押金</string>
    <string name="wo_de_fa_piao">我的发票</string>
    <string name="fa_piao_tai_tou_di_zhi">发票抬头,地址</string>
    <string name="wo_de_tou_su">我的投诉</string>
    <string name="tou_su_fan_kui">每单投诉都反馈</string>
    <string name="click_change_photo">点击跟换你的头像</string>
    <string name="ni_cheng">昵称</string>
    <string name="bang_ding_shou_ji_hao_ma">绑定手机号码</string>
    <string name="bang_ding_yin_han_ka">绑定银行卡</string>
    <string name="mi_ma_she_zhi">密码设置</string>
    <string name="di_ti">地图</string>
    <string name="et_text">输入地址寻找周边门店</string>
    <string name="fu_jin_men_dian">附近门店</string>
    <string name="shan_tou_shi">汕头市</string>
    <string name="long_hu_qu">龙湖区</string>
    <string name="jin_yun_tao_yuan_dian">金园桃园店</string>
    <string name="shop_address">汕头市金凤路桃园51栋102号</string>
    <string name="ju_li">1.88km</string>
    <string name="qing_bang_ding_ni_de_yin_hang_ka">请绑定持卡人本人的银行卡</string>
    <string name="chi_ka_ren">持卡人</string>
    <string name="chi_ka_ren_name">张三</string>
    <string name="ka_hao">卡号</string>
    <string name="qing_shu_ru_yin_hang_ka">请输入银行卡</string>
    <string name="jiao_che">轿车</string>
    <string name="gai_men_dian_yi_jing_zu_man">该门店已经租满</string>
    <string name="wo_de_yin_hang_ka">我的银行卡</string>
    <string name="carname">本田飞度</string>
    <string name="ji_chu_pei_zhi">基础配置</string>
    <string name="you_liang">2.5升</string>
    <string name="show">¥270/日均  ¥2700/月租价</string>
    <string name="go">进入</string>
    <string name="zhu_chi_dian">金平店</string>
    <string name="time">08:00-21:00</string>
    <string name="address">汕头市金凤路桃园51栋102号</string>
    <string name="jiao_ting_zhi_yin">交通指引</string>
    <string name="phone_number">400616666666</string>
    <string name="guan_jian_zi">请输入关键字</string>
    <string name="yu_yue_zhong">预约中</string>

    <string name="qu_che_wang_dian">取车网店:</string>
    <string name="qu_che_time">取车时间:</string>
    <string name="huan_che_time">还车时间:</string>
    <string name="address_show">龙湖泰山网店</string>
    <string name="quche_time_show">2016.10.10 10:00</string>
    <string name="create_time">2016.10.10 10:00:00</string>
    <string name="jin_xing_zhong">进行中</string>
    <string name="order_number">订单号: 2016053115481</string>
    <string name="show_price">¥2300</string>
    <string name="yi_wan_cheng">已完成</string>
    <string name="yi_qu_xiao">已取消</string>
    <string name="strzero">0</string>
    <string name="str300">300</string>
    <string name="ming_xi">费用明细</string>
    <string name="shou_xu_fei">手续费</string>
    <string name="ji_ben_bao_xian_fei">基本保险费</string>
    <string name="che_shun_fei">车损费</string>
    <string name="bi_xuan">必选部分,客户只需承担1500以内的车辆损失费</string>
    <string name="kai_jv_fa_piao">开具发票</string>
    <string name="tai_tou">发票抬头</string>
    <string name="pei_song">配送地址</string>
    <string name="money1">¥2300×1</string>
    <string name="money2">¥2300×1</string>
    <string name="tai_tou1">请选择发票抬头</string>
    <string name="pei_song2">请选择配送地址</string>
    <string name="nest_status">下一步</string>
    <string name="pay_ways">支付方式</string>
    <string name="yu_er_pay">余额支付/支付宝/微信</string>
    <string name="yu_fu_kuan">预付款</string>
    <string name="ji_fen_di_kou">积分抵扣</string>
    <string name="account_yu_e">账户余额</string>
    <string name="bind_phone_number">已绑定手机</string>
    <string name="qie_huan">切换</string>
    <string name="pay_money">还需支付 : ¥ 50</string>
    <string name="fa_piao_tai_tou">新增发票抬头</string>
    <string name="pei_song_address">新增配送地址</string>
    <string name="ya_suo">亚索</string>
    <string name="you_bian">515000</string>
    <string name="test_address">广东省汕头市龙湖区衡山路6号锦江之星酒店6楼</string>
    <string name="title_tai_tou">发票抬头:</string>
    <string name="danwei_name">个人/单位名称</string>
    <string name="zu_che_fei_yong">租车费用</string>
    <string name="price_and_days">¥ 50.0×60</string>
    <string name="jifen_des">当前的积分是:</string>
    <string name="ji_fen">500</string>
    <string name="my_money">我的余额</string>
    <string name="show_my_money">¥ 0.00</string>
    <string name="chong_zhi">充值</string>
    <string name="ti_xian">提现</string>
    <string name="safe_account">账户安全</string>
    <string name="use_des">余额使用说明</string>
    <string name="yu_e_pay">余额支付</string>
    <string name="set_up_pay_password">设置支付密码</string>
    <string name="input_user_name">请输入昵称</string>
    <string name="sure_chose">确定</string>

    <string name="jia_ge_bu_xian">价格不限</string>
    <string name="under_150">¥ 150以下</string>
    <string name="under_300">¥ 150-¥ 300</string>
    <string name="under_500">¥ 300-¥ 500</string>
    <string name="up_500">¥ 500以上</string>
    <string name="small_car">轿车</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="phone_number2">联系手机</string>
    <string name="input_phone_number2">请输入手机号码</string>
    <string name="address_you">所在地区</string>
    <string name="address_detail">地址详情</string>
    <string name="address_specier">无需重复写省/市/区</string>
    <string name="post">邮政编码</string>
    <string name="post_code">请输入邮政编码</string>
    <string name="message0">请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码请输入邮政编码</string>
</resources>
