<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.zhy.android.percent.support.PercentRelativeLayout
        android:background="@color/whiteFFFFFF"
        android:layout_width="0dp"
        app:layout_heightPercent="30%w"
        app:layout_widthPercent="100%w"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_show_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="6%w"
            app:layout_widthPercent="20%w"
            android:text="@string/ya_suo"
            android:textColor="@color/black272727"
            app:layout_textSizePercent="4.5%w"
            app:layout_marginLeftPercent="5%w"
            android:gravity="center_vertical"
            app:layout_marginTopPercent="3%w"
            />

        <TextView
            android:layout_toRightOf="@+id/tv_show_name"
            android:id="@+id/tv_show_phone_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="6%w"
            app:layout_widthPercent="50%w"
            android:text="@string/phone_number"
            android:textColor="@color/gray9999999"
            app:layout_textSizePercent="4.5%w"
            app:layout_marginLeftPercent="1%w"
            android:gravity="center_vertical"
            app:layout_marginTopPercent="3%w"
            />

        <TextView
            android:layout_below="@+id/tv_show_name"
            android:id="@+id/tv_show_address"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="6%w"
            app:layout_widthPercent="60%w"
            android:text="@string/test_address"
            android:textColor="@color/gray9999999"
            app:layout_textSizePercent="4.5%w"
            android:gravity="center_vertical"
            app:layout_marginTopPercent="3%w"
            app:layout_marginLeftPercent="5%w"
            />


        <TextView
            android:layout_below="@+id/tv_show_address"
            android:id="@+id/tv_show_you_bian"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="6%w"
            app:layout_widthPercent="60%w"
            android:text="@string/you_bian"
            android:textColor="@color/gray9999999"
            app:layout_textSizePercent="4.5%w"
            android:gravity="center_vertical"
            app:layout_marginTopPercent="3%w"
            app:layout_marginLeftPercent="5%w"
            />

    </com.zhy.android.percent.support.PercentRelativeLayout>
</com.zhy.android.percent.support.PercentRelativeLayout>